lang: state.common.userLanguage

--- a/app/i18n/ru.json
+++ b/app/i18n/ru.json
@@ -33,6 +33,7 @@
 
   "Header.create_new_term": "Создать новый термин",
   "Header.about_project": "О проекте",
+  "Header.change_language": "Сменить язык",
 
   "Logout.button_logout": "Выйти",
 
