--- a/app/i18n/en.json
+++ b/app/i18n/en.json
@@ -33,6 +33,7 @@
 
   "Header.create_new_term": "Create new term",
   "Header.about_project": "About project",
+  "Header.change_language": "Change language",
 
   "Logout.button_logout": "Log out",
 
