--- a/app/i18n/ru.json
+++ b/app/i18n/ru.json
@@ -54,6 +54,9 @@
   "EditUser.button_save": "Сохранить",
   "EditUser.button_reset_changes": "Сбросить",
   "EditUser.button_cancel": "Отмена",
-  "EditUser.password_of_translator": "Пароль переводчика",
-  "EditUser.confirm_password_of_translator": "Подтверждение пароля"
+
+  "EditUserPassword.title_edit_user": "Редактирование пароля у пользователя {id}",
+  "EditUserPassword.password_of_translator": "Пароль переводчика",
+  "EditUserPassword.confirm_password_of_translator": "Подтверждение пароля",
+  "EditUserPassword.alert_success_of_changing_password": "Пароль был успешно изменен"
 }
