--- a/app/i18n/ru.json
+++ b/app/i18n/ru.json
@@ -54,9 +54,10 @@
   "EditUser.button_save": "Сохранить",
   "EditUser.button_reset_changes": "Сбросить",
   "EditUser.button_cancel": "Отмена",
+  "EditUser.link_reset_password": "Изменить пароль",
 
-  "EditUserPassword.title_edit_user": "Редактирование пароля у пользователя {id}",
-  "EditUserPassword.password_of_translator": "Пароль переводчика",
-  "EditUserPassword.confirm_password_of_translator": "Подтверждение пароля",
-  "EditUserPassword.alert_success_of_changing_password": "Пароль был успешно изменен"
+  "EditUserPassword.title": "Сброс пароля пользователя {id}",
+  "EditUserPassword.new_password": "Новый пароль",
+  "EditUserPassword.new_password_confirm": "Подтверждение пароля",
+  "EditUserPassword.new_password_success": "Пароль был успешно изменен"
 }
