Added notifier on another actions

--- a/app/i18n/en.json
+++ b/app/i18n/en.json
@@ -1,10 +1,13 @@
 {
+  "App.get_languages_error": "Error getting languages",
+
   "Home.search_title_em": "Buddhist terminology",
   "Home.search_title_h1": " in english translations",
 
   "TranslatorPage.translations_language": "Translations language: {translatorLanguage}",
   "TranslatorPage.button_edit": "Edit",
   "TranslatorPage.loading_text": "Loading...",
+  "TranslatorPage.request_error": "The request failed",
 
   "NotFound.main_text": "Page not found",
   "NotFound.go_home": "Go home page",
@@ -15,6 +18,7 @@
   "Edit.request_error": "The request failed",
 
   "SearchInput.button_find": "Find",
+  "SearchInput.request_error": "The request failed",
 
   "Term.add_translation": "Add translation...",
   "Term.sanskrit_term": "Sanskrit: {sanskrit_en}",
@@ -41,6 +45,7 @@
   "Login.please_log_in": "Please, Log In",
   "Login.button_log_in": "Log in!",
   "Login.button_cancel": "Cancel",
+  "Login.authorization_error": "Authorization failed",
 
   "NewTerm.title_new_term": "New term",
   "NewTerm.button_save_term": "Save",
