--- a/app/i18n/en.json
+++ b/app/i18n/en.json
@@ -1,4 +1,6 @@
 {
+  "Common.unknown_error": "Unknown error",
+
   "App.get_languages_error": "Error getting languages",
 
   "Home.search_title_em": "Buddhist terminology",
