New error-notifier

--- a/app/i18n/en.json
+++ b/app/i18n/en.json
@@ -1,5 +1,6 @@
 {
   "Common.unknown_error": "Unknown error",
+  "Common.error_message": "{error}",
 
   "App.get_languages_error": "Error getting languages",
 
