--- a/app/i18n/ru.json
+++ b/app/i18n/ru.json
@@ -76,5 +76,13 @@
   "EditPasswordByTranslator.new_password": "Новый пароль",
   "EditPasswordByTranslator.new_password_hint": "(не менее 6 символов)",
   "EditPasswordByTranslator.new_password_confirm": "Подтверждение пароля",
-  "EditPasswordByTranslator.new_password_success": "Пароль был успешно изменен"
+  "EditPasswordByTranslator.new_password_success": "Пароль был успешно изменен",
+
+  "EditPage.success": "Страница была успешно отредактирована",
+  "EditPage.link_to_edit": "Редактировать",
+  "EditPage.edit_title": "Заголовок страницы",
+  "EditPage.edit_text": "Текст страницы",
+  "EditPage.title_of_page": "Редактирование страницы",
+
+  "PagesList.title": "Страницы"
 }
