--- a/app/i18n/ru.json
+++ b/app/i18n/ru.json
@@ -48,6 +48,7 @@
 
   "Header.create_new_term": "Создать новый термин",
   "Header.about_project": "О проекте",
+  "Header.home_link": "На главную",
   "Header.change_language": "Сменить язык",
 
   "Logout.button_logout": "Выйти",
