--- a/app/i18n/en.json
+++ b/app/i18n/en.json
@@ -12,6 +12,8 @@
   "Home.search_title_h1": " in english translations",
 
   "TranslatorPage.link_to_desc_page": "Translator's Page",
+  "TranslatorPage.articles_of_translator": "Translator's articles",
+  "TranslatorPage.articles_not_found": "Articles not found",
   "TranslatorPage.translations_language": "Translations language: {translatorLanguage}",
   "TranslatorPage.button_edit": "Edit",
   "TranslatorPage.loading_text": "Loading...",
