--- a/app/i18n/en.json
+++ b/app/i18n/en.json
@@ -90,7 +90,8 @@
   "EditPage.edit_title": "Title of page",
   "EditPage.edit_text": "Text of page",
   "EditPage.title_of_page": "Edit page",
-  "EditPage.its_biography_page": "It's biography page",
+  "EditPage.page_author": "Author of page",
+  "EditPage.biography_page": "Author's biography page",
   "EditPage.successful_remove": "The page was successfully deleted",
 
   "NewPage.success": "New page was successfully created",
@@ -100,5 +101,6 @@
   "NewPage.edit_text": "Text of page",
 
   "Pages.title": "Pages",
+  "Pages.biography": "(biography)",
   "Pages.link_to_create": "Create page"
 }
