minor translator's page updates

--- a/app/i18n/ru.json
+++ b/app/i18n/ru.json
@@ -12,7 +12,7 @@
   "Home.search_title_h1": " в русских переводах",
 
   "TranslatorPage.translator_biography_title": "Биография переводчика",
-  "TranslatorPage.no_info": "Нет информации",
+  "TranslatorPage.no_info": "нет информации",
   "TranslatorPage.articles_of_translator": "Статьи переводчика",
   "TranslatorPage.translations_language": "Язык переводов",
   "TranslatorPage.button_edit": "Редактировать",
