--- a/app/i18n/en.json
+++ b/app/i18n/en.json
@@ -12,7 +12,7 @@
   "Home.search_title_h1": " in russian translations",
 
   "TranslatorPage.translator_biography_title": "Translator's biography",
-  "TranslatorPage.no_info": "No information",
+  "TranslatorPage.no_info": "no information",
   "TranslatorPage.articles_of_translator": "Translator's articles",
   "TranslatorPage.translations_language": "Translations language",
   "TranslatorPage.button_edit": "Edit",
