--- a/app/i18n/en.json
+++ b/app/i18n/en.json
@@ -53,8 +53,9 @@
   "Header.about_project": "About",
   "Header.home_link": "Home",
   "Header.change_language": "Change language",
-  "Header.translation_features": "Translation features",
-  "Header.parallel_texts": "Parallel texts",
+  "Header.translation_features": "On the translation of Buddhist texts",
+  "Header.translators": "Translators",
+  "Header.history": "History of Buddhist texts in Russia",
 
   "Logout.button_logout": "Log out",
 
