Header.parallel_texts eng i18n token

--- a/app/i18n/en.json
+++ b/app/i18n/en.json
@@ -54,6 +54,7 @@
   "Header.home_link": "Home",
   "Header.change_language": "Change language",
   "Header.translation_features": "On the translation of Buddhist texts",
+  "Header.parallel_texts": "Versions of texts translations",
   "Header.translators": "Translators",
   "Header.history": "History of Buddhist texts in Russia",
 
