Terms in Header

--- a/app/i18n/en.json
+++ b/app/i18n/en.json
@@ -62,6 +62,7 @@
   "Header.translation_features": "On the translation of Buddhist texts",
   "Header.parallel_texts": "Versions of texts translations",
   "Header.translators": "Translators",
+  "Header.terms": "Terms",
   "Header.history": "History of Buddhist texts in Russia",
 
   "Logout.button_logout": "Log out",
