--- a/app/i18n/ru.json
+++ b/app/i18n/ru.json
@@ -62,6 +62,7 @@
   "Header.translation_features": "О переводе буддийских текстов",
   "Header.parallel_texts": "Версии переводов текстов",
   "Header.translators": "Переводчики",
+  "Header.terms": "Термины",
   "Header.history": "История буддийских текстов в России",
 
   "Logout.button_logout": "Выйти",
