header pages titles update

--- a/app/i18n/en.json
+++ b/app/i18n/en.json
@@ -59,8 +59,8 @@
   "Header.about_project": "About",
   "Header.home_link": "Home",
   "Header.change_language": "Change language",
-  "Header.translation_features": "On the translation of Buddhist texts",
-  "Header.parallel_texts": "Versions of texts translations",
+  "Header.translation_features": "Features of translation",
+  "Header.parallel_texts": "Parallel texts",
   "Header.translators": "Translators",
   "Header.terms": "Terms",
   "Header.history": "History of Buddhist texts in Russia",
