--- a/app/i18n/ru.json
+++ b/app/i18n/ru.json
@@ -59,8 +59,8 @@
   "Header.about_project": "О проекте",
   "Header.home_link": "На главную",
   "Header.change_language": "Сменить язык",
-  "Header.translation_features": "О переводе буддийских текстов",
-  "Header.parallel_texts": "Версии переводов текстов",
+  "Header.translation_features": "Особенности переводов",
+  "Header.parallel_texts": "Параллельные тексты",
   "Header.translators": "Переводчики",
   "Header.terms": "Термины",
   "Header.history": "История буддийских текстов в России",
